# AI-Engineering-Masterclass

./: .gitattributes  .gitignore  docker-compose.yml  logs.txt  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: app.py
apps/chatbot_ui/: pyproject.toml
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-Amazon.ipynb
src/: app.py
